--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <BODY>
     <P>Hola Mundo</P>
-</BODY>
-
+    <p>Este es un cambio que realizaremos para probar el comando pull</p>
+</BODY>    
 </HTML>
